django:models updated for generics , brand names

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 # User-specific stuff
 .DS_Store
-migrations
+migrations/*
+!migrations/__init__.py
 .idea
 .env
 .idea/**/workspace.xml
@@ -192,7 +193,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
@@ -230,7 +230,6 @@ dmypy.json
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
