scrapy proxy added

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DB_PORT=5432
 DB_NAME=your-db
 DB_USERNAME=your_username
 DB_PASSWORD=your_password
+
+PROXY_HOST=127.0.0.1
+PROXY_PORT=6666
+PROXY_USER=proxy_user
+PROXY_PASSWORD=proxy_password
