--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ cryptography==3.3.1
 cssselect==1.1.0
 Django==3.2.12
 django-admin-autocomplete-filter==0.7.1
+django-filter==21.1
 djangorestframework==3.12.2
 happybase==1.2.0
 hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
+install==1.3.5
 itemadapter==0.2.0
 itemloaders==1.0.4
 jmespath==0.10.0
